# OpenCLWorker

./: CMakeLists.txt  OpenCLWorkerConfig.cmake
include/OpenCLWorker/: OpenCLWorker.hpp  PlatformManager.hpp  ProgramLoader.hpp  ProgramManager.hpp  Programs.hpp
src/: OpenCLWorker.cpp  PlatfromManager.cpp  ProgramLoader.cpp  ProgramManager.cpp  Programs.cpp
